--- a/2-serie-site-responsivo-menu-hamburguer-main/responsividade mobile first/style.css
+++ b/2-serie-site-responsivo-menu-hamburguer-main/responsividade mobile first/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #ebecee;
     --branco: #FFFFFF;
     --laranja:#EB9B00;
-    --azul-degrade: linear-
+    --azul-degrade: linear-gradient(97.54deg, #002f52  35.49%, #326589  165.37%);
 
 }
 
